examples/bad/06-DuplicateArgNames.tms

void x(int y, boolean z, int y) {
  return;
}

void main () {
  return;
}